Changelog
=========

1.1.1 - Unreleased
------------------

* Added troubleshooting section to readme.
  [miohtama, fschulze]

1.1 - 2009-08-07
----------------

* Use relative paths from the buildout directory for the ``develop`` option
  if possible. This fixes issues if your buildout path contains a space.
  [fschulze]

* Warn when trying to activate or deactivate a package which isn't checked out.
  [fschulze]

* Don't depend on elementree on Python >= 2.5, because it's builtin there.
  [fschulze]

* When checking out a source it will automatically be activated.
  [fschulze]

* Use 'sources' as the default section name for source information.
  [fschulze]

* Added support for filesystem packages without version control with the
  'fs' type.
  [fschulze]

1.0.1 - 2009-05-05
------------------

* Fixed case sensitivity of package names for several commands.
  [fschulze]

* SVN externals no longer cause a modified status.
  [fschulze]

1.0 - 2009-05-02
----------------

* Added ``info`` command to print various informations about packages.
  [fschulze]

* Added ``reset`` command to reset the develop state of packages. This is
  useful when switching to a new buildout configuration. During the next
  buildout run the develop state is determined the same way as in a clean
  buildout.
  [fschulze]

* Got rid of deprecation warning in Python 2.6 by removing unnecessary call
  of __init__ in working copy implementations.
  [fschulze]

0.15 - 2009-04-17
-----------------

* Added reminder to run buildout after activating or deactivating packages.
  [fschulze]

* Added ``rebuild`` command to rerun buildout with the last used arguments.
  [fschulze]

0.14 - 2009-04-16
-----------------

* Fixed verbose output of ``checkout`` command.
  [fschulze]

* Added ``-f`` option to ``update`` command to force updates even if the
  working copy is dirty.
  [fschulze]

0.13 - 2009-04-14
-----------------

* Added ``-a`` option to ``update`` command to only update the packages